src/grammar/myERParser.py
# Generated from myER.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class myERParser ( Parser ):

    grammarFileName = "myER.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'ENTITY'", "'EXTENDS'", "'SPECIALIZES'", 
                     "'SPECIALIZED BY'", "'RELATION'", "'[0-1]'", "'[1-1]'", 
                     "'[1-N]'", "'[1-n]'", "'[0-N]'", "'[0-n]'", "'string'", 
                     "'integer'", "'boolean'", "'date'", "'float'", "'PK'", 
                     "'PRIMARY KEY'", "'['", "']'", "'{'", "'}'", "'('", 
                     "')'", "':'", "';'", "'.'", "','", "'-'", "'*'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "LBRACKET", 
                      "RBRACKET", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
                      "COLON", "SEMICOLON", "DOT", "COMMA", "DASH", "REC", 
                      "Whitespace", "Newline", "Integer", "Identifier", 
                      "LineComment", "BlockComment" ]

    RULE_program = 0
    RULE_entityDeclaration = 1
    RULE_attributeBlock = 2
    RULE_relationDeclaration = 3
    RULE_relationSpecificationList = 4
    RULE_relationSpecification = 5
    RULE_multiplicity = 6
    RULE_identifierList = 7
    RULE_type = 8
    RULE_attributeDeclaration = 9
    RULE_attributeDeclarationList = 10
    RULE_entitySpecificationList = 11
    RULE_entitySpecification = 12
    RULE_primaryKey = 13

    ruleNames =  [ "program", "entityDeclaration", "attributeBlock", "relationDeclaration", 
                   "relationSpecificationList", "relationSpecification", 
                   "multiplicity", "identifierList", "type", "attributeDeclaration", 
                   "attributeDeclarationList", "entitySpecificationList", 
                   "entitySpecification", "primaryKey" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    LBRACKET=19
    RBRACKET=20
    LBRACE=21
    RBRACE=22
    LPAREN=23
    RPAREN=24
    COLON=25
    SEMICOLON=26
    DOT=27
    COMMA=28
    DASH=29
    REC=30
    Whitespace=31
    Newline=32
    Integer=33
    Identifier=34
    LineComment=35
    BlockComment=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entityDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myERParser.EntityDeclarationContext)
            else:
                return self.getTypedRuleContext(myERParser.EntityDeclarationContext,i)


        def relationDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myERParser.RelationDeclarationContext)
            else:
                return self.getTypedRuleContext(myERParser.RelationDeclarationContext,i)


        def getRuleIndex(self):
            return myERParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = myERParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==5:
                self.state = 30
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 28
                    self.entityDeclaration()
                    pass
                elif token in [5]:
                    self.state = 29
                    self.relationDeclaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(myERParser.Identifier, 0)

        def LPAREN(self):
            return self.getToken(myERParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(myERParser.RPAREN, 0)

        def identifierList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myERParser.IdentifierListContext)
            else:
                return self.getTypedRuleContext(myERParser.IdentifierListContext,i)


        def attributeBlock(self):
            return self.getTypedRuleContext(myERParser.AttributeBlockContext,0)


        def SEMICOLON(self):
            return self.getToken(myERParser.SEMICOLON, 0)

        def relationSpecificationList(self):
            return self.getTypedRuleContext(myERParser.RelationSpecificationListContext,0)


        def getRuleIndex(self):
            return myERParser.RULE_entityDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntityDeclaration" ):
                listener.enterEntityDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntityDeclaration" ):
                listener.exitEntityDeclaration(self)




    def entityDeclaration(self):

        localctx = myERParser.EntityDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_entityDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(myERParser.T__0)
            self.state = 36
            self.match(myERParser.Identifier)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23:
                self.state = 37
                self.match(myERParser.LPAREN)
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==34:
                    self.state = 38
                    self.relationSpecificationList()


                self.state = 41
                self.match(myERParser.RPAREN)


            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2 or _la==3:
                self.state = 44
                _la = self._input.LA(1)
                if not(_la==2 or _la==3):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 45
                self.identifierList()


            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 48
                self.attributeBlock()


            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 51
                self.match(myERParser.T__3)
                self.state = 52
                self.identifierList()


            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 55
                self.match(myERParser.SEMICOLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(myERParser.LBRACE, 0)

        def attributeDeclarationList(self):
            return self.getTypedRuleContext(myERParser.AttributeDeclarationListContext,0)


        def RBRACE(self):
            return self.getToken(myERParser.RBRACE, 0)

        def getRuleIndex(self):
            return myERParser.RULE_attributeBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeBlock" ):
                listener.enterAttributeBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeBlock" ):
                listener.exitAttributeBlock(self)




    def attributeBlock(self):

        localctx = myERParser.AttributeBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_attributeBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(myERParser.LBRACE)
            self.state = 59
            self.attributeDeclarationList()
            self.state = 60
            self.match(myERParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(myERParser.Identifier, 0)

        def LPAREN(self):
            return self.getToken(myERParser.LPAREN, 0)

        def entitySpecificationList(self):
            return self.getTypedRuleContext(myERParser.EntitySpecificationListContext,0)


        def RPAREN(self):
            return self.getToken(myERParser.RPAREN, 0)

        def attributeBlock(self):
            return self.getTypedRuleContext(myERParser.AttributeBlockContext,0)


        def SEMICOLON(self):
            return self.getToken(myERParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return myERParser.RULE_relationDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationDeclaration" ):
                listener.enterRelationDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationDeclaration" ):
                listener.exitRelationDeclaration(self)




    def relationDeclaration(self):

        localctx = myERParser.RelationDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_relationDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(myERParser.T__4)
            self.state = 63
            self.match(myERParser.Identifier)
            self.state = 64
            self.match(myERParser.LPAREN)
            self.state = 65
            self.entitySpecificationList()
            self.state = 66
            self.match(myERParser.RPAREN)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 67
                self.attributeBlock()


            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 70
                self.match(myERParser.SEMICOLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationSpecificationListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relationSpecification(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myERParser.RelationSpecificationContext)
            else:
                return self.getTypedRuleContext(myERParser.RelationSpecificationContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(myERParser.COMMA)
            else:
                return self.getToken(myERParser.COMMA, i)

        def getRuleIndex(self):
            return myERParser.RULE_relationSpecificationList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationSpecificationList" ):
                listener.enterRelationSpecificationList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationSpecificationList" ):
                listener.exitRelationSpecificationList(self)




    def relationSpecificationList(self):

        localctx = myERParser.RelationSpecificationListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_relationSpecificationList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.relationSpecification()
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28:
                self.state = 74
                self.match(myERParser.COMMA)
                self.state = 75
                self.relationSpecification()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationSpecificationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(myERParser.Identifier, 0)

        def multiplicity(self):
            return self.getTypedRuleContext(myERParser.MultiplicityContext,0)


        def primaryKey(self):
            return self.getTypedRuleContext(myERParser.PrimaryKeyContext,0)


        def getRuleIndex(self):
            return myERParser.RULE_relationSpecification

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationSpecification" ):
                listener.enterRelationSpecification(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationSpecification" ):
                listener.exitRelationSpecification(self)




    def relationSpecification(self):

        localctx = myERParser.RelationSpecificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_relationSpecification)
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.match(myERParser.Identifier)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.match(myERParser.Identifier)
                self.state = 83
                self.multiplicity()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.match(myERParser.Identifier)
                self.state = 85
                self.primaryKey()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiplicityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return myERParser.RULE_multiplicity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicity" ):
                listener.enterMultiplicity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicity" ):
                listener.exitMultiplicity(self)




    def multiplicity(self):

        localctx = myERParser.MultiplicityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_multiplicity)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            _la = self._input.LA(1)
            if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 4032) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(myERParser.Identifier)
            else:
                return self.getToken(myERParser.Identifier, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(myERParser.COMMA)
            else:
                return self.getToken(myERParser.COMMA, i)

        def getRuleIndex(self):
            return myERParser.RULE_identifierList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierList" ):
                listener.enterIdentifierList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierList" ):
                listener.exitIdentifierList(self)




    def identifierList(self):

        localctx = myERParser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_identifierList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(myERParser.Identifier)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28:
                self.state = 91
                self.match(myERParser.COMMA)
                self.state = 92
                self.match(myERParser.Identifier)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACKET(self):
            return self.getToken(myERParser.LBRACKET, 0)

        def Integer(self):
            return self.getToken(myERParser.Integer, 0)

        def RBRACKET(self):
            return self.getToken(myERParser.RBRACKET, 0)

        def getRuleIndex(self):
            return myERParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = myERParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_type)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(myERParser.T__11)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.match(myERParser.T__11)
                self.state = 100
                self.match(myERParser.LBRACKET)
                self.state = 101
                self.match(myERParser.Integer)
                self.state = 102
                self.match(myERParser.RBRACKET)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.match(myERParser.T__12)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 104
                self.match(myERParser.T__13)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 105
                self.match(myERParser.T__14)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 106
                self.match(myERParser.T__15)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(myERParser.Identifier, 0)

        def primaryKey(self):
            return self.getTypedRuleContext(myERParser.PrimaryKeyContext,0)


        def multiplicity(self):
            return self.getTypedRuleContext(myERParser.MultiplicityContext,0)


        def COLON(self):
            return self.getToken(myERParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(myERParser.TypeContext,0)


        def LBRACE(self):
            return self.getToken(myERParser.LBRACE, 0)

        def attributeDeclarationList(self):
            return self.getTypedRuleContext(myERParser.AttributeDeclarationListContext,0)


        def RBRACE(self):
            return self.getToken(myERParser.RBRACE, 0)

        def getRuleIndex(self):
            return myERParser.RULE_attributeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeDeclaration" ):
                listener.enterAttributeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeDeclaration" ):
                listener.exitAttributeDeclaration(self)




    def attributeDeclaration(self):

        localctx = myERParser.AttributeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_attributeDeclaration)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.match(myERParser.Identifier)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.match(myERParser.Identifier)
                self.state = 111
                self.primaryKey()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.match(myERParser.Identifier)
                self.state = 113
                self.multiplicity()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 114
                self.match(myERParser.Identifier)
                self.state = 115
                self.match(myERParser.COLON)
                self.state = 116
                self.type_()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 117
                self.match(myERParser.Identifier)
                self.state = 118
                self.match(myERParser.COLON)
                self.state = 119
                self.type_()
                self.state = 120
                self.primaryKey()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 122
                self.match(myERParser.Identifier)
                self.state = 123
                self.match(myERParser.COLON)
                self.state = 124
                self.type_()
                self.state = 125
                self.multiplicity()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 127
                self.match(myERParser.Identifier)
                self.state = 128
                self.match(myERParser.LBRACE)
                self.state = 129
                self.attributeDeclarationList()
                self.state = 130
                self.match(myERParser.RBRACE)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 132
                self.match(myERParser.Identifier)
                self.state = 133
                self.match(myERParser.LBRACE)
                self.state = 134
                self.attributeDeclarationList()
                self.state = 135
                self.match(myERParser.RBRACE)
                self.state = 136
                self.multiplicity()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeDeclarationListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributeDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myERParser.AttributeDeclarationContext)
            else:
                return self.getTypedRuleContext(myERParser.AttributeDeclarationContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(myERParser.COMMA)
            else:
                return self.getToken(myERParser.COMMA, i)

        def getRuleIndex(self):
            return myERParser.RULE_attributeDeclarationList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeDeclarationList" ):
                listener.enterAttributeDeclarationList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeDeclarationList" ):
                listener.exitAttributeDeclarationList(self)




    def attributeDeclarationList(self):

        localctx = myERParser.AttributeDeclarationListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_attributeDeclarationList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.attributeDeclaration()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28:
                self.state = 141
                self.match(myERParser.COMMA)
                self.state = 142
                self.attributeDeclaration()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntitySpecificationListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entitySpecification(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myERParser.EntitySpecificationContext)
            else:
                return self.getTypedRuleContext(myERParser.EntitySpecificationContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(myERParser.COMMA)
            else:
                return self.getToken(myERParser.COMMA, i)

        def REC(self):
            return self.getToken(myERParser.REC, 0)

        def getRuleIndex(self):
            return myERParser.RULE_entitySpecificationList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySpecificationList" ):
                listener.enterEntitySpecificationList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySpecificationList" ):
                listener.exitEntitySpecificationList(self)




    def entitySpecificationList(self):

        localctx = myERParser.EntitySpecificationListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_entitySpecificationList)
        self._la = 0 # Token type
        try:
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.entitySpecification()
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==28:
                    self.state = 149
                    self.match(myERParser.COMMA)
                    self.state = 150
                    self.entitySpecification()
                    self.state = 155
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.entitySpecification()
                self.state = 157
                self.match(myERParser.REC)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntitySpecificationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(myERParser.Identifier, 0)

        def multiplicity(self):
            return self.getTypedRuleContext(myERParser.MultiplicityContext,0)


        def primaryKey(self):
            return self.getTypedRuleContext(myERParser.PrimaryKeyContext,0)


        def getRuleIndex(self):
            return myERParser.RULE_entitySpecification

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySpecification" ):
                listener.enterEntitySpecification(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySpecification" ):
                listener.exitEntitySpecification(self)




    def entitySpecification(self):

        localctx = myERParser.EntitySpecificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_entitySpecification)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.match(myERParser.Identifier)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.match(myERParser.Identifier)
                self.state = 163
                self.multiplicity()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 164
                self.match(myERParser.Identifier)
                self.state = 165
                self.primaryKey()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryKeyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return myERParser.RULE_primaryKey

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryKey" ):
                listener.enterPrimaryKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryKey" ):
                listener.exitPrimaryKey(self)




    def primaryKey(self):

        localctx = myERParser.PrimaryKeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_primaryKey)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            _la = self._input.LA(1)
            if not(_la==17 or _la==18):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





